# MagnusAnkiAddon

./: .env  .gitignore  .gitmodules  Directory.Build.props  JAStudio.sln  MENU_PORTING_STATUS.md  MagnusAnkiAddon.sln  NOTE_SERIALIZATION_STATUS.md  POC_SUMMARY.md  PORTING_COMMENTS_REVIEW.md  PORTING_GAP_ANALYSIS.md  PORTING_STATUS.md  PORTING_TODOS.md  README.md  README_DOTNET_POC.md  RIDER_GUIDE.md  SUCCESS.md  UI_PORTING_STATUS.md  axaml-views.instructions.md  basedpyright-wrapper-config.json  basedpyright-wrapper.bat  basedpyright-wrapper.sh  copy_libraries.ps1  copy_libraries.py  csharp-code.instructions.md  csharp-tests.instructions.md  csharp_files.txt  download-required-library-files.bat  example_python_to_dotnet.py  full-build.ps1  general-convention.instructions.md  line_profiler_testing.py  mirror-anki-main-media-folder.lnk  mirror-anki-main-media-folder.ps1  project-conventions.md  project_convention.instructions.md  pyproject.toml  pyrightconfig_command_line.json  pytest.ini  quick_start.ps1  (+12 more)
.github/: copilot-instructions.md
.github/instructions/: axaml-views.instructions.md  csharp-code.instructions.md  csharp-specifications.instructions.md  csharp-tests.instructions.md  python-code.instructions.md
.github/instructions/shared-instructions/: README.md  axaml-views.instructions.md  csharp-code.instructions.md  csharp-specifications.instructions.md  csharp-tests.instructions.md  dev-docs.instructions.md
.github/workflows/: auto-approve-workflow-runs.yml  ci.yml  copilot-setup-steps.yml
JAStudio.Console/: JAStudio.Console.csproj  Program.cs
JAStudio.Core.Tests/: JAStudio.Core.Tests.csproj  JanomeProviderTests.cs
JAStudio.Core/Infrastructure/: JanomeProvider.cs  PythonEnvironment.cs
JAStudio.Core/Ports/: IJapaneseNlpProvider.cs
JAStudio.Core/Services/: TokenizerService.cs
JAStudio.PythonInterop/: JAStudio.PythonInterop.csproj  JanomeProvider.cs  PythonEnvironment.cs
MagnusCore/: MagnusCore.csproj
MagnusCore.Console/: MagnusCore.Console.csproj  Program.cs
MagnusCore.Tests/: JanomeProviderTests.cs  MagnusCore.Tests.csproj
MagnusCore/Domain/: Token.cs
MagnusCore/Infrastructure/: JanomeProvider.cs
MagnusCore/Ports/: IJapaneseNlpProvider.cs
MagnusCore/Services/: TokenizerService.cs
dev_docs/: ENCAPSULATION_REFACTORING_STATUS.md  JASLIB_REMOVAL_STATUS.md  MISSING_EDITOR_FIELDS.md  PORTING_COMMENTS_REVIEW.md  PORTING_STATUS.md  PORTING_TODOS.md  PROBLEMS_ANALYSIS.md  media-storage-and-import.md  media-sync.md  new.html  old.html  resharper-report.txt  web-rendering-architecture.md
dev_scripts/: link-anki-addon.ps1
git-scripts/: push.ps1
src/: __init__.py  meta.json  mypy.ini  pytest.ini  suppression_codes.txt
src/ExploratoryTests/anki_exploration/: UI_TO_BACKEND_COMMUNICATION  create_collection.py
src/ExploratoryTests/test_parsing_libraries/: alternatives.py  test_ginza.py  test_ginza_exploration.py  test_unidic2ud.py  unidic2ud_formatter.py
src/ExploratoryTests/unidic2ud/: u2udtreenode.py  u2udtreeparser.py  u2udtreepparseresult.py  ud2ud_parsers.py  ud_japanese_pos_tags.py  ud_universal_pos_tags.py  universal_dependency_relationships.py
src/MagnusAddon/: __init__.py  autoslot.py  autoslot.pyi  browser_search.py  card_history.json  context_search.py  ex_autoslot.py  line_profiling_hacks.py  meta.json  my_anki.py  mylog.py  refresh_media_references.py  test_edit_note.py  wani.py  wani_constants.py  wanikani.py  wanikani_api_client_test.py  wanikani_note.py
src/MagnusAddon/Note/: MyNote.py  SentenceNote.py  WaniKanaVocabNote.py  WaniKanjiNote.py  WaniNote.py  WaniRadicalNote.py  WaniVocabNote.py
src/MagnusAddon/_addon_copies/: refresh_media_references.py
src/MagnusAddon/anki_extentions/: card_ex.py  config_manager_ex.py  deck_configdict_ex.py  deck_ex.py  note_ex.py  sheduling_states_ex.py
src/MagnusAddon/ankiutils/: anki_module_import_issues_fix_just_import_this_module_before_any_other_anki_modules.py  anki_shim.py  app.py  audio_suppressor.py  my_anki.py  query_builder.py  search_executor.py  search_utils.py  ui_utils.py  ui_utils_interface.py
src/MagnusAddon/batches/: local_note_updater.py  local_note_updater.py.orig
src/MagnusAddon/configuration/: __init__.py  configuration.py  configuration_cache_impl.py  configuration_value.py  readings_mapping_dialog.py  settings.py
src/MagnusAddon/dotnet/: dotnet_runtime_loader.py
src/MagnusAddon/hooks/: __init__.py  auto_bury_multiple_failures.py  browser_right_click_menu.py  clear_studying_cache_on_card_suspend_unsuspend.py  collection_search.py  copy_card_sort_field_to_clipboard.py  copy_sort_field_to_clipboard.py  custom_auto_advance_timings.py  custom_short_term_scheduling.py  custom_shortcuts.py  custom_timebox_lengths.py  editor_buttons.py  (+30 more)
src/MagnusAddonTests/: __init__.py  collection_using_test.py  pytest.ini  test_collection_factory.py  test_experiment.py  test_full_collection_scratch_pad.py
src/jastudio/: __init__.py  mylog.py
src/jastudio_src/: __init__.py  card_history.json  meta.json
src/src_dotnet/: JAStudio.sln.DotSettings  JAStudio.slnx  JAStudio.slnx.DotSettings  copy-runtime-binaries.ps1  regenerate-stubs.ps1
src/tests/: collection.anki2
src/user_files/: media-import-rules.json
src/web/: Anki.csproj  Anki.sln  Anki.sln.DotSettings  Snippets.html  YomichanEntry.html  compilerconfig.json  htmlpage.hbs
src_dotnet/: JAStudio.sln  JAStudio.slnx  JAStudio.v3.ncrunchsolution.user.orig  regenerate-stubs.ps1
src_dotnet/JAStudio.Console/: Program.cs
src_dotnet/JAStudio.Core.Tests/: JanomeProviderTests.cs
src_dotnet/JAStudio.PythonInterop/: JAStudio.PythonInterop.csproj  JanomeProvider.cs  JanomeTokenizer.cs  PythonEnvironment.cs
src_dotnet/global_/: __init__.pyi
sync-scripts/: pull-shared-instructions.ps1  push-shared-instructions.ps1
typings/: clr.pyi
typings/Avalonia/: __init__.pyi
typings/CompiledAvaloniaXaml/: __init__.pyi
typings/Internal/: __init__.pyi
typings/System/: __init__.pyi
typings/autoslot/: __init__.pyi
typings/janome/: dic.pyi  fst.pyi  lattice.pyi  system_dic.pyi  tokenizer.pyi
typings/pythonnet/: __init__.pyi
(+2833 files in other folders)
