[project]
requires-python = ">=3.9"

[tool.ruff]
extend-exclude = ["_lib", "_lib_patched"]
line-length = 9999

[tool.ruff.lint]

select = [
    "E", # pycodestyle
    "F",# Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I",# isort sorts imports etc
    "TC", # get's the correct imports into and out of TYPE_CHECKING blocks
    "ANN", # type annotations warnings
    "FA", # More type annotations fixes,
    "Q", #quoting style,
    "C4",
    "PT", # pytest style
    "RET", #return values
]

isort.required-imports = ["from __future__ import annotations"] # since vital other warnings only appear if this line is there we want it in every file.

#select = ["ALL"]

 flake8-pytest-style.parametrize-names-type = "csv"

ignore = [
    "E701", #E701 multiple statements on one line,
    "TC006",# [*] Add quotes to type expression in `typing.cast()`
    "UP007",# Use `X | Y` for type annotations

    #below here is only needed when ALL is the select value
    #"Q", # rules on how quotes are use...
    "D", #Docstring rules
    "W292", # [*] No newline at end of file
     "PT003", #`scope='function'` is implied in `@pytest.fixture()` ... But I like being explicit. No need to remember the default

]

